# telephonepi

./: .envrc  assistant.py  pyproject.toml  textinput.py
